--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cypress": "^6.8.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
