--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Reviewer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon ./server.js",
     "birthday": "cypress run --spec 'cypress/integration/birthdayApp.spec.js' --env url=$URL",
